--- a/01-twoSum.html
+++ b/01-twoSum.html
@@ -18,18 +18,46 @@
         因为 nums[0] + nums[1] = 2 + 7 = 9
         所以返回 [0, 1]
         */
-        let nums = [2, 7, 11, 15];
-        let target = 9;
-        var twoSum = function (arr, target) {
-            for (var i = 0; i < arr.length - 1; i++) {
-                for (var j = i + 1; j < arr.length; j++) {
-                    if (arr[i] + arr[j] == target) {
-                        return [i, j];
-                    }
-                }
-            }
+        // let nums = [2, 7, 11, 15];
+        // let target = 9;
+        // function twoSum(arr, target) {
+        //     for (let i = 0; i < nums.length; i++) {
+        //         for (let j = i + 1; j < nums.length; j++) {
+        //             if (nums[j] == target - nums[i]) return [i, j]
+        //         }
+        //     }
+        // }
+        // console.log(twoSum(nums, target));
+        // var func = function a() {
+        //     alert(typeof a);
+        // }
+        // func();
+        // alert(typeof a)
+
+        // var fullname = 'ming yuan'
+        // var obj = {
+        //     fullname: 'ming yuan yun',
+        //     prop: {
+        //         fullname: '明源云',
+        //         getFullname: function () {
+        //             return this.fullname
+        //         }
+        //     }
+        // }
+        // console.log(obj.prop.getFullname());
+        // var test = obj.prop.getFullname;
+        // console.log(test.call(obj.prop));
+
+        // var arr = [1,3,5,76,7,-1,0,6]
+        // console.log(Math.max(...arr));
+
+        function add(a) {
+            var temp = function (b) { return add(a + b); }
+            temp.valueOf = temp.toString = function () { return a; };
+            return temp;
         }
-        twoSum(nums, target);
+       
+        console.log(add(2)(3)(4));
     </script>
 </body>
 
